Fix code block alignment issue with language label.
Removed padding-left: 0px override from code-block__wrapper to ensure the code content aligns properly with the language label in the header. Both now use the same left padding of stylekit.rem(18).

--- a/src/styles/CodeBlock.module.scss
+++ b/src/styles/CodeBlock.module.scss
@@ -30,7 +30,6 @@
 
 		padding: stylekit.rem(18);
     padding-top: 0px;
-		padding-left: 0px;
 
 		width: calc(100% - #{stylekit.space(4)});
 		tab-size: 2;
